manifests/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: torrent
      port: 6881
      targetPort: torrent
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: torrent-udp
      protocol: UDP
  selector:
    app: qbittorrent
