manifests/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qbittorrent.home-lab.begoodguys.ovh
      secretName: qbittorrent-tls
  rules:
    - host: qbittorrent.home-lab.begoodguys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
